# advent-of-code

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  run.py
2015/: day01.py  day02.py  day03.py  day04.py
2023/: day01-1.py  day01-2.py  day02-1.py
